# ai-cli

./: Cargo.toml  README.md  config.toml
src/: ai_backend.rs  command.rs  constants.rs  lib.rs  main.rs  settings.rs  text_generation.rs  token_output_stream.rs
src/ai_backend/: bedrock.rs  common.rs  local.rs  mod.rs
