[package]
name = "ai-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
accelerate-src = {version = "0.3.2", optional = true}
anyhow = "1.0.93"
candle-core = "0.7.2"
candle-nn = "0.7.2"
candle-transformers = "0.7.2"
clap = { version = "4.5.20", features = ["derive"] }
clap-verbosity-flag = "2.2.2"
csv = "1.3.1"
hf-hub = "0.3.2"
intel-mkl-src = {version = "0.8.1",optional = true}
serde_json = "1.0.132"
tokenizers = "0.20.3"
tracing = "0.1.40"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"
tokio = { version = "1.36.0", features = ["full"] }
aws-sdk-bedrockruntime = "1.61.0"
tracing-log = "0.2.0"
config = "0.14.1"

[features]
accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
